--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: Installing Dependencies
+      run: npm ci
+    - name: Restarting Backend Server Service - Production Manger
+      run: pm2 restart hms-backend
